# tina

./: .gitignore  AGENTS.md  CLAUDE.md  ISSUES.md  ORCHESTRATION-HANDOFF.md  Procfile  README.md  marketplace.json  mise.toml  package-lock.json  package.json  tina-checks.toml  vitest.config.ts
tina-daemon/: Cargo.toml  MANUAL_TEST.md  dev.tina.daemon.plist
tina-daemon/src/: actions.rs  config.rs  git.rs  heartbeat.rs  http.rs  lib.rs  main.rs  reconcile.rs  sessions.rs  sync.rs  telemetry.rs  terminal.rs  watcher.rs
tina-daemon/tests/: integration_test.rs
tina-data/: Cargo.toml
tina-data/src/: convex_client.rs  db.rs  discovery.rs  lib.rs  tasks.rs  teams.rs  tina_state.rs  types.rs  watcher.rs
tina-harness/: Cargo.toml
tina-harness/scenarios/: README.md
tina-harness/scenarios/01-single-phase-feature/: design.md  expected.json  last-passed.json  scenario.json
tina-harness/scenarios/02-two-phase-refactor/: design.md  expected.json  scenario.json
tina-harness/scenarios/03-failing-tests/: design.md  expected.json  scenario.json  setup.patch
tina-harness/scenarios/04-codex-reviewer/: design.md  expected.json  scenario.json
tina-harness/scenarios/05-codex-worker-flow/: design.md  expected.json  scenario.json
tina-harness/scenarios/06-codex-malformed-output/: design.md  expected.json  scenario.json
tina-harness/scenarios/07-tina-web-phase-2-integration/: design.md  expected.json  scenario.json
tina-harness/scripts/: watch-convex.sh
tina-harness/src/: failure.rs  lib.rs  main.rs  verify.rs
tina-harness/src/commands/: generate.rs  mod.rs  run.rs  validate.rs  verify.rs
tina-harness/src/scenario/: loader.rs  mod.rs  types.rs
tina-harness/test-project/: Cargo.toml
tina-harness/test-project/src/: lib.rs  main.rs
tina-harness/test-project/tests/: integration_tests.rs
tina-harness/tests/: scenario_integration.rs
tina-monitor/: Cargo.toml
tina-monitor/docs/plans/: 2026-01-30-tina-monitor-phase-7.md  2026-01-30-tina-monitor-postmortem.md  2026-01-30-tina-monitor-rebuild-design.md  phase-1-core-framework.md  phase-2-data-integration.md  phase-2.5-schema-alignment.md  phase-3-panel-implementation.md  phase-4-overlays-actions.md  phase-5-polish.md
tina-monitor/src/: actions.rs  app.rs  config.rs  dashboard.rs  entity.rs  layout.rs  lib.rs  logging.rs  main.rs  panel.rs  types.rs  watcher.rs
tina-monitor/src/cli/: mod.rs  status.rs  tasks.rs  teams.rs
tina-monitor/src/data/: convex.rs  discovery.rs  local.rs  mod.rs  tasks.rs  teams.rs  tina_state.rs  types.rs  watcher.rs
tina-monitor/src/git/: commits.rs  diff.rs  mod.rs
tina-monitor/src/overlay/: fuzzy.rs  help.rs  mod.rs  quicklook.rs  send.rs
tina-monitor/src/panels/: commits.rs  mod.rs  tasks.rs  team.rs
tina-monitor/src/terminal/: fallback.rs  kitty.rs  mod.rs
tina-monitor/src/tmux/: capture.rs  mod.rs  send.rs
tina-monitor/src/tui/: app.rs  mod.rs  ui.rs
tina-monitor/tests/: cli_parsing_tests.rs  cli_tests.rs  data.rs  data_integration.rs  discovery_integration.rs  integration.rs  layout_tests.rs  logging_tests.rs  panel_data_tests.rs  send_tests.rs  tui_tests.rs  watcher_tests.rs
tina-session/: Cargo.toml
tina-session/src/: config.rs  convex.rs  error.rs  lib.rs  main.rs  routing.rs  telemetry.rs
tina-session/src/checks/: complexity.rs  mod.rs  plan.rs  verify.rs
tina-session/src/claude/: mod.rs  ready.rs
tina-session/src/commands/: attach.rs  capture.rs  check.rs  cleanup.rs  config.rs  convex_writes.rs  daemon.rs  exec_codex.rs  exists.rs  init.rs  list.rs  mod.rs  name.rs  orchestrate.rs  register_team.rs  review.rs  runtime_context.rs  send.rs  start.rs  state.rs  state_sync.rs  status.rs  stop.rs  wait.rs
tina-session/src/daemon/: mod.rs  sync.rs  watcher.rs
tina-session/src/db/: migrations.rs  mod.rs  orchestration_events.rs  orchestrations.rs  phases.rs  projects.rs  queries.rs  task_events.rs  team_members.rs
tina-session/src/session/: lookup.rs  mod.rs  naming.rs
tina-session/src/state/: mod.rs  orchestrate.rs  schema.rs  timing.rs  transitions.rs  validation.rs
tina-session/src/tmux/: capture.rs  mod.rs  send.rs  session.rs
tina-session/src/watch/: status.rs
tina-session/tests/: cli_for_model_test.rs  exec_codex_test.rs  init_cli_test.rs  policy_commands_test.rs  start_cli_test.rs  verify_test.rs  work_cli.rs  work_command_test.rs
tina-session/tests/common/: mod.rs
tina-web/: Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.perf.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
tina-web/.storybook/: main.ts  preview.ts  theme.ts
tina-web/e2e/: keyboard.spec.ts  navigation.spec.ts  performance.spec.ts  responsive.spec.ts  smoke.spec.ts  smoke.test.ts
tina-web/e2e/support/: app.po.ts
tina-web/frontend/: package-lock.json  package.json
tina-web/frontend/src/: App.tsx  api.ts  types.ts
tina-web/src/: App.tsx  api.rs  convex.ts  index.css  lib.rs  main.rs  main.tsx  state.rs  types.ts  vite-env.d.ts  ws.rs
tina-web/src/components/: ActionTimeline.module.scss  ActionTimeline.tsx  AppShell.module.scss  AppShell.tsx  AppShellHeaderContext.tsx  ChangesTab.module.scss  ChangesTab.tsx  ChecksTab.tsx  CommitDiffPreview.module.scss  CommitDiffPreview.tsx  CommitListPanel.tsx  CommitQuicklook.module.scss  CommitQuicklook.tsx  ConversationTab.tsx  Dashboard.tsx  DataErrorBoundary.module.scss  DataErrorBoundary.tsx  EventSection.tsx  EventTimeline.tsx  FeedbackSection.tsx  FeedbackSummarySection.tsx  FormDialog.module.scss  FormDialog.tsx  GitOpsSection.module.scss  GitOpsSection.tsx  MarkdownRenderer.tsx  NewSessionDialog.tsx  OrchestrationControls.tsx  OrchestrationDetail.tsx  OrchestrationList.tsx  OrchestrationPage.module.scss  OrchestrationPage.tsx  Panel.tsx  PendingTaskEditor.tsx  PhaseQuicklook.module.scss  PhaseQuicklook.tsx  PhaseTimelinePanel.module.scss  PhaseTimelinePanel.tsx  PlanQuicklook.module.scss  PlanQuicklook.tsx  (+26 more)
tina-web/src/lib/: id.ts  (+9 more)
tina-web/test-results/: .last-run.json
tina-web/tests/: api_integration.rs  api_test.rs  fixture.rs
(+716 files in other folders)
