[package]
name = "tina-data"
version = "0.2.0"
edition = "2021"
description = "Shared data layer for Tina orchestration monitoring"

[dependencies]
# Shared types with tina-session
tina-session = { path = "../tina-session" }

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1"
dirs = "5"

# Convex cloud backend
convex = "0.10"

[profile.dev]
debug = "line-tables-only"

[dev-dependencies]
tempfile = "3"
