[package]
name = "tina-harness"
version = "0.1.0"
edition = "2021"
description = "Test harness for tina orchestration and monitor"

[dependencies]
tina-session = { path = "../tina-session" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
debug = "line-tables-only"

[dev-dependencies]
tempfile = "3"
