[package]
name = "tina-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1"
thiserror = "1"
dirs = "5"
shellexpand = "3"
notify = "6"

[dev-dependencies]
tempfile = "3"
