[package]
name = "tina-monitor"
version = "0.2.0"
edition = "2021"

[dependencies]
# Shared types with tina-session
tina-session = { path = "../tina-session" }
# Shared data layer
tina-data = { path = "../tina-data" }
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (Convex SDK is async, TUI event loop is sync)
tokio = { version = "1", features = ["rt", "macros"] }

# Utilities
anyhow = "1"
thiserror = "1"
dirs = "5"
shellexpand = "3"
notify = "6"
arboard = "3.6.1"
nucleo-matcher = "0.3"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[profile.dev]
debug = "line-tables-only"

[dev-dependencies]
tempfile = "3"
