[package]
name = "tina-session"
version = "0.1.1"
edition = "2021"
description = "Phase lifecycle management for Tina orchestrations"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6"

# Async (for file watching)
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Paths
dirs = "5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
