[package]
name = "tina-session"
version = "0.2.0"
edition = "2021"
description = "Phase lifecycle management for Tina orchestrations"

[dependencies]
# Shared Convex data/client/mapping layer
tina-data = { path = "../tina-data" }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6"

# Async (for file watching)
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Paths
dirs = "5"

# Convex cloud backend (used by binary commands, not the library)
convex = "0.10"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"

# Signal handling (for daemon)
ctrlc = "3"
libc = "0.2"

[profile.dev]
debug = "line-tables-only"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
