[package]
name = "tina-web"
version = "0.1.0"
edition = "2021"
description = "Web dashboard for Tina orchestration monitoring"

[dependencies]
# Shared data layer
tina-data = { path = "../tina-data" }
tina-session = { path = "../tina-session" }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WebSocket
futures = "0.3"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
